<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/names"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_numbers"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emails"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/txtAccountNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_nos"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/txtBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balances"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/txtIfscCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ifsc_codes"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />


    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_details"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/btnViewBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_balance"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"/>

    <Button
        android:id="@+id/btnDeposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deposit_cash"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"/>

    <Button
        android:id="@+id/btnTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_money"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"/>


</LinearLayout>
