<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/mybank"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_user"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/hmpgmsg"
        android:layout_width="350dp"
        android:layout_height="94dp"
        android:gravity="center"
        android:text="@string/welcome_to_mybank_you_can_use_this_app_to_transfer_money_between_accounts"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnViewUsers"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:backgroundTint="#673AB7"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:text="@string/view_account"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"/>

    <!-- Navbar at the Footer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="?attr/selectableItemBackground">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:text="@string/logout" />
    </LinearLayout>

</LinearLayout>
